[package]
name = "altilium_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.40", features = ["full"]}
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6" 
thiserror = "1.0"
config = { version = "0.14", features = ["toml"] }
